; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/exfat/extr_exfat_super.c_exfat_write_super.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/exfat/extr_exfat_super.c_exfat_write_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.super_block*)* @exfat_write_super to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exfat_write_super(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  %3 = load %struct.super_block*, %struct.super_block** %2, align 8
  %4 = call i32 @__lock_super(%struct.super_block* %3)
  %5 = load %struct.super_block*, %struct.super_block** %2, align 8
  %6 = call i32 @__set_sb_clean(%struct.super_block* %5)
  %7 = load %struct.super_block*, %struct.super_block** %2, align 8
  %8 = call i32 @sb_rdonly(%struct.super_block* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load %struct.super_block*, %struct.super_block** %2, align 8
  %12 = call i32 @ffsSyncVol(%struct.super_block* %11, i32 1)
  br label %13

13:                                               ; preds = %10, %1
  %14 = load %struct.super_block*, %struct.super_block** %2, align 8
  %15 = call i32 @__unlock_super(%struct.super_block* %14)
  ret void
}

declare dso_local i32 @__lock_super(%struct.super_block*) #1

declare dso_local i32 @__set_sb_clean(%struct.super_block*) #1

declare dso_local i32 @sb_rdonly(%struct.super_block*) #1

declare dso_local i32 @ffsSyncVol(%struct.super_block*, i32) #1

declare dso_local i32 @__unlock_super(%struct.super_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
